Обновление почты автора

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "bank-widget"
 version = "0.1.0"
 description = ""
-authors = ["Kirill Barkhatov <kirill_barkhatov@hotmail.com>"]
+authors = ["Kirill Barkhatov <k.s.barkhatov@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
