--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.3"
+python-dotenv = "^1.0.1"
+types-requests = "^2.32.0.20240622"
 
 
 [tool.poetry.group.lint.dependencies]
