--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 types-requests = "^2.32.0.20240622"
 pandas = "^2.2.2"
 openpyxl = "^3.1.5"
+pandas-stubs = "^2.2.2.240603"
 
 
 [tool.poetry.group.lint.dependencies]
